--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
     body {
         font-family: Arial, sans-serif;
         margin: 0;
-        background: #eef3f8;
+        background: linear-gradient(135deg, #d2f0f7, #d2f7d2);
         color: #333;
+        backdrop-filter: blur(10px);
     }
     .header {
         display: flex;
         align-items: center;
         gap: 20px;
         padding: 20px;
-        background: white;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        background: rgba(255,255,255,0.3);
+        box-shadow: 0 8px 30px rgba(0,0,0,0.1);
+        backdrop-filter: blur(10px);
+        border-radius: 15px;
+        margin: 10px 20px;
     }
     .logo img {
         height: 70px;
@@ -31,7 +35,7 @@
     .title {
         font-size: 26px;
         font-weight: bold;
-        color: #2a4d8f;
+        color: #1a4d6f;
     }
     .container {
         padding: 20px;
@@ -40,40 +44,47 @@
     }
     .dashboard-box {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
         gap: 20px;
         margin-top: 20px;
     }
     .card {
-        background: white;
+        background: rgba(255,255,255,0.25);
         padding: 20px;
-        border-radius: 12px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        border-radius: 15px;
+        box-shadow: 0 8px 30px rgba(0,0,0,0.08);
         text-align: center;
         font-size: 18px;
-        border-left: 6px solid #2a4d8f;
+        border-left: 6px solid #6fc3c0;
+        transition: transform 0.3s, background 0.3s;
+        cursor: pointer;
+    }
+    .card:hover {
+        transform: translateY(-5px);
+        background: rgba(255,255,255,0.4);
     }
     .sheet-view iframe {
         width: 100%;
         height: 85vh;
         border: none;
         margin-top: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+        border-radius: 15px;
+        box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+        backdrop-filter: blur(10px);
     }
     .download-btn {
         margin-top: 20px;
         padding: 12px 20px;
-        background: #2a4d8f;
+        background: #6fc3c0;
         color: white;
         border: none;
-        border-radius: 8px;
+        border-radius: 12px;
         cursor: pointer;
         font-size: 16px;
         transition: 0.3s;
     }
     .download-btn:hover {
-        background: #1b3260;
+        background: #4fa99d;
     }
 </style>
 </head>
@@ -86,14 +97,14 @@
     </div>
 
     <div class="container">
-        <button class="download-btn" onclick="window.location.href='https://docs.google.com/spreadsheets/d/2PACX-1vR2IabL0WlXzTma7pV4tiHE4uy2AUi_JcP5AFUxrO9ugB0L43AHKtam5wtCnFSGXStlhpTf2lkZ1TMK/export?format=xlsx'">Download Full Excel File</button>
+        <button class="download-btn" onclick="window.location.href='https://docs.google.com/spreadsheets/d/1vP4wZd4hJ9rULHmAJuvGTVZVKGL17nSDVoWz4xX67tc/export?format=xlsx'">Download Full Excel File</button>
 
         <div class="dashboard-box">
-            <div class="card" onclick="loadSheet('714147395')">📄 Summary</div>
-            <div class="card" onclick="loadSheet('304070629')">📘 QTR-1</div>
-            <div class="card" onclick="loadSheet('1447107603')">📙 QTR-2</div>
-            <div class="card" onclick="loadSheet('1505178600')">📗 QTR-3</div>
-            <div class="card" onclick="loadSheet('1825913837')">📕 QTR-4</div>
+            <div class="card" onclick="loadSheet('714147395')"> Classic Summary</div>
+            <div class="card" onclick="loadSheet('304070629')"> QTR-1 Report</div>
+            <div class="card" onclick="loadSheet('1447107603')"> QTR-2 Report</div>
+            <div class="card" onclick="loadSheet('1505178600')"> QTR-3 Report</div>
+            <div class="card" onclick="loadSheet('1825913837')"> QTR-4 Report</div>
         </div>
 
         <div class="sheet-view">
