--- a/index.html
+++ b/index.html
@@ -8,23 +8,44 @@
     body {
         font-family: Arial, sans-serif;
         margin: 0;
-        background: linear-gradient(135deg, #d2f0f7, #d2f7d2);
+        background: linear-gradient(135deg, #a7d8f5, #d2f0f7);
         color: #333;
         backdrop-filter: blur(10px);
+        overflow-x: hidden;
+        position: relative;
     }
+
+    /* Animated floating background circles */
+    body::before {
+        content: '';
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: radial-gradient(circle, rgba(255,255,255,0.15) 0%, transparent 70%);
+        animation: floatBG 30s linear infinite;
+        z-index: -1;
+    }
+
+    @keyframes floatBG {
+        0% { transform: rotate(0deg) translateX(0) translateY(0); }
+        100% { transform: rotate(360deg) translateX(0) translateY(0); }
+    }
+
     .header {
         display: flex;
         align-items: center;
         gap: 20px;
         padding: 20px;
-        background: rgba(255,255,255,0.3);
+        background: rgba(255,255,255,0.35);
         box-shadow: 0 8px 30px rgba(0,0,0,0.1);
         backdrop-filter: blur(10px);
         border-radius: 15px;
         margin: 10px 20px;
     }
     .logo img {
-        height: 70px;
+        height: 90px; /* slightly bigger */
         animation: breathe 3s ease-in-out infinite;
     }
     @keyframes breathe {
@@ -33,7 +54,7 @@
         100% { transform: scale(1); opacity: 1; }
     }
     .title {
-        font-size: 26px;
+        font-size: 28px;
         font-weight: bold;
         color: #1a4d6f;
     }
