--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
     body {
         font-family: Arial, sans-serif;
         margin: 0;
-        background: linear-gradient(135deg, #a7d8f5, #d2f0f7);
         color: #333;
         backdrop-filter: blur(10px);
         overflow-x: hidden;
         position: relative;
+        height: 100vh;
+        background: #a7d8f5;
+        background: linear-gradient(to top, #d2f0f7 0%, #a7d8f5 100%);
     }
 
-    /* Animated floating background circles */
-    body::before {
-        content: '';
-        position: absolute;
-        top: -50%;
-        left: -50%;
+    /* Sky animation: moving clouds */
+    .sky {
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 200%;
-        height: 200%;
-        background: radial-gradient(circle, rgba(255,255,255,0.15) 0%, transparent 70%);
-        animation: floatBG 30s linear infinite;
+        height: 100%;
+        background: url('https://i.ibb.co/WpbK6Yk/clouds.png') repeat-x;
+        background-size: cover;
+        animation: moveClouds 120s linear infinite;
         z-index: -1;
     }
 
-    @keyframes floatBG {
-        0% { transform: rotate(0deg) translateX(0) translateY(0); }
-        100% { transform: rotate(360deg) translateX(0) translateY(0); }
+    @keyframes moveClouds {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-50%); }
     }
 
     .header {
@@ -44,31 +46,37 @@
         border-radius: 15px;
         margin: 10px 20px;
     }
+
     .logo img {
-        height: 90px; /* slightly bigger */
+        height: 90px; /* bigger logo */
         animation: breathe 3s ease-in-out infinite;
     }
+
     @keyframes breathe {
         0% { transform: scale(1); opacity: 1; }
         50% { transform: scale(1.08); opacity: 0.9; }
         100% { transform: scale(1); opacity: 1; }
     }
+
     .title {
         font-size: 28px;
         font-weight: bold;
         color: #1a4d6f;
     }
+
     .container {
         padding: 20px;
         max-width: 1200px;
         margin: auto;
     }
+
     .dashboard-box {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
         gap: 20px;
         margin-top: 20px;
     }
+
     .card {
         background: rgba(255,255,255,0.25);
         padding: 20px;
@@ -80,10 +88,12 @@
         transition: transform 0.3s, background 0.3s;
         cursor: pointer;
     }
+
     .card:hover {
         transform: translateY(-5px);
         background: rgba(255,255,255,0.4);
     }
+
     .sheet-view iframe {
         width: 100%;
         height: 85vh;
@@ -93,6 +103,7 @@
         box-shadow: 0 8px 30px rgba(0,0,0,0.2);
         backdrop-filter: blur(10px);
     }
+
     .download-btn {
         margin-top: 20px;
         padding: 12px 20px;
@@ -104,12 +115,15 @@
         font-size: 16px;
         transition: 0.3s;
     }
+
     .download-btn:hover {
         background: #4fa99d;
     }
 </style>
 </head>
 <body>
+    <div class="sky"></div> <!-- Sky animation -->
+
     <div class="header">
         <div class="logo">
             <img src="https://i.ibb.co/N0Bdr5N/Care-Pro-Logo-Jan-2025-Transparent.png" alt="Care-Pro Logo">
